项目提交版本

--- a/项目规范.md
+++ b/项目规范.md
@@ -34,18 +34,32 @@
   * 谭阳(销售管理)
     * 端口4041
     * 功能
-      * 调用库存管理查看各个商品库存详情查询
-      * 购买
-        * 调用合作管理的客户查看或添加
-        * 添加订单
-          * 调用合作管理添加购买记录
-        * 支付
-          * 添加支付记录
+      * 购买流程
+        * 添加订单条目
+          * 查询到该商户id的商户
+          * 设置订单的商户信息
+          * 添加订单记录
+          * 将购物车订单条目中的订单外键指向该订单，并将购物车订单条目中的购物车外键置空
+          * cooperationFeign修改model剩余数量
+          * 判断model的剩余数量
+          * storehouseFeign修改store剩余数量
+          * storehouseFeign添加出库记录
+          * 清除购物车金额
+        * 付款
+          * 查询到该商户id的商户
+          * 订单状态非已下单状态
+          * 修改订单状态为已付款
+          * 新增付款订单记录
         * 发货
-          * 调用合作管理添加发货记录
-      * 退货
-        * 调用合作管理的客户查看
-        * 调用合作管理添加退货记录
+          * 查询到该商户id的商户
+          * 订单状态非已付款状态
+          * 修改订单状态为已发货
+          * 新增发货订单记录
+        * 收货
+          * 查询到该商户id的商户
+          * 订单状态非已发货状态
+          * 修改订单状态为已收货
+          * 新增收货订单记录
   * 文鹏林(合作管理)
     * 端口5051
     * 功能
@@ -60,6 +74,8 @@
     * 端口6061
   * getway
     * 端口7071
+  * seata
+    * 端口8091
 * 统一的sql文件管理(参考群中文档)
   * 自己负责的所有模块的resources目录下都添加sql文件夹及文件(统一使用idea中的自带插件，使用方法查看"idea自带的数据库管理方法.md")
     * sql文件名为表名
