--- a/项目规范.md
+++ b/项目规范.md
@@ -35,7 +35,11 @@
     * 端口4041
     * 功能
       * 购买流程
-        * 添加订单条目
+        * 添加购物车
+          * 该购物车是否存在
+          * 该配件型号是否存在
+          * 该配件型号仓库数量是否充足
+        * 下单
           * 查询到该商户id的商户
           * 设置订单的商户信息
           * 添加订单记录
